# CN_CHomeworks1

./: CN_CHomeworks1.code-workspace  README.md
backup/: main.cxx  socket_man.cxx  socket_man.hxx
sChat/: CMakeLists.txt  main.cxx  readme.md
sChat/core/: CMakeLists.txt  server.cxx  server.hxx  socket_man.cxx  socket_man.hxx  utilities.cxx  utilities.hxx
sChat_Client/: CMakeLists.txt  main.cxx  readme.md
sChat_Client/core/: CMakeLists.txt  socket_man.cxx  socket_man.hxx  utilities.cxx  utilities.hxx
sFTP/: CMakeLists.txt  config.json  main.cxx  man  readme.md
sFTP/core/: CMakeLists.txt  config_man.cxx  config_man.hxx  log_man.cxx  log_man.hxx  net_man.cxx  net_man.hxx  socket_man.cxx  socket_man.hxx  types.hxx  utilities.cxx  utilities.hxx
sFTP_Client/: CMakeLists.txt  main.cxx  readme.md
sFTP_Client/core/: CMakeLists.txt  socket_man.cxx  socket_man.hxx  utilities.cxx  utilities.hxx
wServer/: 404.html  CMakeLists.txt  index.html  main.cxx  readme.md  test.css  test.js
wServer/core/: CMakeLists.txt  http.cxx  http.hxx  server.cxx  server.hxx  socket_man.cxx  socket_man.hxx  utilities.cxx  utilities.hxx
